Enhancing heatmap and fixing bettermap issues

--- a/src/app/panels/bettermap/editor.html
+++ b/src/app/panels/bettermap/editor.html
@@ -1,7 +1,7 @@
   <div class="row-fluid">
     <div class="span4">
       <form>
-        <h6>Coordinate Field <tip>geoJSON array! Long,Lat NOT Lat,Long</tip></h6>
+        <h6>Coordinate Field <tip>Coordinates latitude and longititude field</tip></h6>
         <input bs-typeahead="fields.list" type="text" class="input-medium" ng-model="panel.field" ng-change="set_refresh(true)">
       </form>
     </div>
