--- a/src/app/panels/heatmap/editor.html
+++ b/src/app/panels/heatmap/editor.html
@@ -12,7 +12,7 @@
     </form>
   </div>
     <div class="span4"><h6>Rows Limit <tip>Maximum number of rows to be fetched and displayed</tip></h6>
-      <input id="rows_limit" type="number" min="1" max="500" value="100" class="input-small" ng-model="panel.editor_size" ng-change="set_refresh(true)">
+      <input id="rows_limit" type="number" min="1" max="500" class="input-small" ng-model="panel.row_size" ng-change="set_refresh(true)">
     </div>
 </div>
 
@@ -22,6 +22,6 @@
         <select class="input-medium" ng-model="panel.color" ng-options="c for c in ['gray','blue', 'red', 'green', 'brown']" ng-change="render()"></select>
     </div>
     <div class="span1">
-        <h6>Transposed</h6><input type="checkbox" ng-model="panel.transposed" ng-checked="panel.transposed">
+        <label class="small">Transposed</label><input type="checkbox" ng-model="panel.transposed" ng-checked="panel.transposed">
     </div>
 </div>
