--- a/src/app/panels/heatmap/editor.html
+++ b/src/app/panels/heatmap/editor.html
@@ -19,7 +19,7 @@
 <div class="row-fluid">
     <div class="span3">
         <label class="small">Heatmap Color <tip>Base color for Heatmap. Intensity of the chosen color in a cell is proportional to the respective pivot facet count for that cell</tip></label>
-        <select class="input-medium" ng-model="panel.color" ng-options="c for c in ['gray','blue', 'red', 'green', 'brown']" ng-change="render()"></select>
+        <select class="input-medium" ng-model="panel.color" ng-options="c as v for (c, v) in {'blue': 'Blues', 'red': 'Reds', 'gray': 'Grays', 'lime': 'Greens', 'brown': 'Browns'}" ng-change="render()"></select>
     </div>
     <div class="span1">
         <label class="small">Transposed</label><input type="checkbox" ng-model="panel.transposed" ng-checked="panel.transposed">
