--- a/src/app/partials/dashLoader.html
+++ b/src/app/partials/dashLoader.html
@@ -87,6 +87,7 @@
                                confirmation="Are you sure you want to delete {{row.id}} dashboard?">
                                 <i class="icon-remove"></i></a>
                         </td>
+                        <!--<td><a><i class="icon-share" ng-click="share = dashboard.share_link(row.id,'solr',row.id)" bs-modal="'app/panels/dashcontrol/share.html'"></i></a></td>-->
                     </tr>
                 </table>
             </div>
@@ -127,12 +128,6 @@
             </form>
             <br>
             <small ng-show="gist.last">Last gist: <a target="_blank" href="{{gist.last}}">{{gist.last}}</a></small>
-        </li>
-        <li ng-show="dashboard.current.loader.copy_to_clipboard">
-                <h6>Copy to clipboard</h6>
-                <form class="input-append">
-                    <button class="btn" ng-click="copy_to_clipboard()"><i class="icon-copy"></i></button>
-                </form>
         </li>
 
         <li ng-show="dashboard.current.loader.save_elasticsearch">
