--- a/src/app/panels/resultCluster/module.html
+++ b/src/app/panels/resultCluster/module.html
@@ -1,37 +1,13 @@
 <div ng-controller='resultCluster' ng-init="init()">
   <style>
-    .d3-tip {
-      line-height: 1;
-      font-weight: bold;
-      padding: 12px;
-      background: rgba(0, 0, 0, 0.8);
-      color: #fff;
-      border-radius: 2px;
+    .highlighter {
+      stroke: none;
+      fill: transparent;
     }
-
-    /* Creates a small triangle extender for the tooltip */
-    .d3-tip:after {
-      box-sizing: border-box;
-      display: inline;
-      font-size: 10px;
-      line-height: 1;
-      color: rgba(0, 0, 0, 0.8);
-      content: "\25BC";
-      position: absolute;
-      text-align: center;
-    }
-
-    /* Style northward tooltips differently */
-    .d3-tip.n:after {
-      margin: -1px 0 0 0;
-      top: 100%;
-      left: 0;
-    }
-
     .highlight {
       stroke: white;
+      stroke-width: 2px;
     }
-
   </style>
   <div result-cluster style="overflow:hidden; position:relative"></div>
 </div>
