Adding multiquery logical operator option

--- a/src/app/panels/query/editor.html
+++ b/src/app/panels/query/editor.html
@@ -1,6 +1,13 @@
-<div class="span2" ng-show="!_.isUndefined(panel.spyable)">
-    <label class="small">
-        Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
-    </label>
-    <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+<div class="row-fluid">
+	<div class="span2" ng-show="!_.isUndefined(panel.spyable)">
+	    <label>Mode</label>
+	    <select class="input-mini" ng-model="panel.operator"
+	                ng-options="f for f in ['OR', 'AND']" ng-change="set_refresh(true)"></select>
+	</div>
+	<div class="span2">
+	    <label class="small">
+	        Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
+	    </label>
+	    <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+	</div>
 </div>
