--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,9 @@
   <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
   <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+    <script src="vendor/xhr-xdr-adapter.js" type="text/javascript"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE; chrome=1" />
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
     <title>Banana</title>
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/rotate.css">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <!-- load the root require context -->
     <script src="vendor/require/require.js"></script>
     <script src="app/components/require.config.js"></script>
@@ -38,7 +40,7 @@
             <!-- <img src="img/silklogo.png" data-placement="bottom"> -->
             {{dashboard.current.title}}
           </span>
-          <ul class="nav pull-right" ng-controller='dashLoader' ng-init="init()" ng-include="'/app/partials/dashLoader.html'">
+          <ul class="nav pull-right" ng-controller='dashLoader' ng-init="init()" ng-include="'app/partials/dashLoader.html'">
           </ul>
         </div>
       </div>
@@ -48,6 +50,7 @@
         <div ng-view></div>
       </div>
     </div>
+    <textarea id="clipboard-buffer" style="position:absolute;width:0px;height:0px;left:-1000px;top:-1000px">{{dashboard.current}}</textarea>
   </body>
 
 </html>
