--- a/src/app/panels/multiseries/editor.html
+++ b/src/app/panels/multiseries/editor.html
@@ -2,8 +2,8 @@
 <div class="row-fluid">
   <div class="span3">
     <h6>Field Name <tip>Only one field for the x-axis</tip></h6>
-    <input bs-typeahead="fields.list" ng-options="field for field in fields.list" type="text" 
-      placeholder="timestamp_dt" class="input-medium" ng-model="panel.field" ng-change="set_refresh(true)" />
+    <input bs-typeahead="fields.list" type="text" placeholder="timestamp_dt" 
+      class="input-medium" ng-model="panel.field" ng-change="set_refresh(true)" />
   </div>
   <div class="span2">
     <h6 class="small">Max Rows <tip>Maximum number of rows to retrieve for the result set.</tip></h6>
