--- a/src/app/panels/sunburst/editor.html
+++ b/src/app/panels/sunburst/editor.html
@@ -1,11 +1,20 @@
 <div class="row-fluid">
-  <div class="span9">
+  <div class="span4">
     <h6>Facet Pivot String <tip>Separated by commas</tip></h6>
-    <input array-join bs-typeahead="fields.list" style="width:500px;" type="text" placeholder="field1,field2" class="input-small" ng-model="panel.facet_pivot_strings" ng-change="set_refresh(true)">
+    <input array-join bs-typeahead="fields.list" type="text"
+      placeholder="field1, field2" class="input-large" 
+      ng-model="panel.facet_pivot_strings" ng-change="set_refresh(true)"/>
   </div>
 
-  <div class="span3">
+  <div class="span4">
+    <h6>Label font size</h6>
+    <select class="input-mini" ng-model="panel.style['font-size']"
+      ng-options="f for f in ['7pt','8pt','9pt','10pt','12pt','14pt','16pt','18pt','20pt','24pt','28pt','32pt','36pt','42pt','48pt','52pt','60pt','72pt']"></select></span>
+  </div>
+
+  <div class="span4">
     <h6>Facet Limit</h6>
-    <input type="number" class="input-medium" ng-model="panel.facet_limit" ng-change="set_refresh(true)">
+    <input type="number" class="input-medium" ng-model="panel.facet_limit" 
+      ng-change="set_refresh(true)"/>
   </div>
 </div>
