--- a/src/app/partials/dasheditor.html
+++ b/src/app/partials/dasheditor.html
@@ -34,12 +34,12 @@
                 </label><input type="checkbox" ng-model="dashboard.current.panel_hints"
                                ng-checked="dashboard.current.panel_hints"/>
             </div>
-            <div class="span3">
+            <div class="span2">
                 <label class="small">Style</label><select class="input-small" ng-model="dashboard.current.style"
                                                           ng-options="f for f in ['dark','light']"></select>
             </div>
-            <div class="span2">
-                <label class="small">Version</label>Banana {{config.REV}}
+            <div class="span3">
+                <label class="small">Version</label>Banana <span app-version />
             </div>
         </div>
     </div>
