--- a/src/app/partials/dashLoader.html
+++ b/src/app/partials/dashLoader.html
@@ -147,7 +147,7 @@
                     <li class="input-append">
                         <input class='input-medium' placeholder="{{dashboard.current.title}}" type="text"
                                ng-model="elasticsearch.title"/>
-                        <button class="btn" ng-click="elasticsearch_save('dashboard', null)"><i class="icon-save"></i></button>
+                        <button class="btn" ng-click="solr_save('dashboard', null)"><i class="icon-save"></i></button>
                     </li>
                 </ul>
             </form>
