--- a/src/app/panels/table/module.html
+++ b/src/app/panels/table/module.html
@@ -63,15 +63,15 @@
 
             <!-- Column Values -->
             <td ng-show="panel.fields.length>0" ng-repeat="field in panel.fields"
-                ng-bind-html-unsafe="(event.kibana.highlight[field] || event.kibana._source[field])
+                ng-bind-html="(event.kibana.highlight[field] || event.kibana._source[field])
                   | tableHighlight
                   | tableTruncate:panel.trimFactor:panel.fields.length:field:panel.imageFields
                   | tableDisplayImageField:field:panel.imageFields:panel.imgFieldWidth:panel.imgFieldHeight">
             </td>
 
             <!-- Hyperlink Column -->
-            <td ng-click="" ng-show="panel.enableHyperlink && panel.displayLinkIcon" ng-bind-html-unsafe="event.kibana._source[panel.hyperlinkColumnForURI] |urlLinkAsIcon"></td>
-            <td ng-show="panel.enableHyperlink && !panel.displayLinkIcon" ng-bind-html-unsafe="event.kibana._source[panel.hyperlinkColumnForURI] |urlLink"></td>
+            <td ng-click="" ng-show="panel.enableHyperlink && panel.displayLinkIcon" ng-bind-html="event.kibana._source[panel.hyperlinkColumnForURI] |urlLinkAsIcon"></td>
+            <td ng-show="panel.enableHyperlink && !panel.displayLinkIcon" ng-bind-html="event.kibana._source[panel.hyperlinkColumnForURI] |urlLink"></td>
             <!-- end Hyperlink column -->
           </tr>
 
@@ -106,7 +106,7 @@
                     <i class="pointer icon-th" ng-click="toggle_field(key)" bs-tooltip="'Toggle table column'"></i>
                   </td>
                   <!-- At some point we need to create a more efficient way of applying the filter pipeline -->
-                  <td style="white-space:pre-wrap" ng-bind-html-unsafe="value|noXml|urlLink|stringify"></td>
+                  <td style="white-space:pre-wrap" ng-bind-html="value|noXml|urlLink|stringify"></td>
                 </tr>
               </table>
               <pre style="white-space:pre-wrap"  ng-bind-html="without_kibana(event)|tableJson:2" ng-switch-when="json"></pre>
