Loading query panel styles from a CSS module

--- a/src/app/panels/query/module.css
+++ b/src/app/panels/query/module.css
@@ -18,6 +18,7 @@
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
+  width: 206px;
 }
 .form-search:hover .has-remove {
   padding-left: 50px !important;
