--- a/src/app/panels/table/module.html
+++ b/src/app/panels/table/module.html
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div style="{{panel.overflow}}:{{panel.height || row.height}};" ng-class="{'col-md-9':panel.field_list,'col-md-12':!panel.field_list}" class="table-doc-table">
+    <div style="{{panel.overflow}}:{{panel.height || row.height}};" ng-class="{'col-md-9':panel.field_list,'col-md-12':!panel.field_list}">
       <i class="pull-left icon-chevron-sign-right pointer" ng-click="panel.field_list = !panel.field_list" bs-tooltip="'Show field list'" ng-show="!panel.field_list"></i>
 
       <!-- Paging at the top of table -->
