--- a/src/app/panels/query/module.html
+++ b/src/app/panels/query/module.html
@@ -7,7 +7,7 @@
           ng-style="{color: querySrv.list[id].color}"></i>
         <i class="icon-remove-sign pointer remove-query" ng-show="querySrv.ids.length > 1" ng-click="querySrv.remove(id);refresh()"></i>
       </span>
-      <input class="form-control panel-query" ng-class="{ 'form-control': unPinnedQueries.length==1, 'last-query': $last, 'has-remove': querySrv.ids.length > 1 }" bs-typeahead bs-options="entry for entry in panel.history" data-min-length=0 data-items=100 type="text" ng-model="querySrv.list[id].query" />
+      <input class="panel-query" ng-class="{ 'form-control': unPinnedQueries.length==1, 'last-query': $last, 'has-remove': querySrv.ids.length > 1 }" bs-typeahead bs-options="entry for entry in panel.history" data-min-length=0 data-items=100 type="text" ng-model="querySrv.list[id].query" />
       <span class="end-query">
         <i class="icon-search pointer" ng-click="refresh()" ng-show="$last"></i>
         <!-- Remove the plus icon to disable multiple queries function -->
